@@ -2,6 +2,7 @@
 
 ### 1.0.4
 * Dev - LSX Sharing integrated
+* Dev - Added modals customization
 
 ### 1.0.3
 * Moved all blog customizer options to LSX Blog Customizer plugin
